In the non-newer material mode, made the close (X) white for the hovered and pressed states.

Bug: 838523
Change-Id: Ifbe36e9b0a6b1ffad61da0f977ba7660d18f4e55
Reviewed-on: https://chromium-review.googlesource.com/1037904
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555395}
Former-commit-id: 27ac53b91957a56030f9b9228c57a549def13dd1